update website ui design for my slef

--- a/index/index.html
+++ b/index/index.html
@@ -18,249 +18,268 @@
     <meta content="True" name="HandheldFriendly">
     <meta content="320" name="MobileOptimized">
     <script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?feeb972ffe69b037d0f9ed061853ed05";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?feeb972ffe69b037d0f9ed061853ed05";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
     </script>
     <style>
-    body {
-        background: #151515;
-        color: #fff;
-    }
-
-    a {
-        color: #fff;
-        outline: none;
-        text-decoration: none;
-    }
-
-    ul {
-        list-style: none;
-    }
-
-    .text {
-        font-size: 64px;
-        font-weight: bold;
-        text-transform: uppercase;
-        fill: none;
-        stroke-width: 2px;
-        stroke-dasharray: 90 310;
-        animation: stroke 6s infinite linear;
-    }
-
-    .text-1 {
-        stroke: #fb0d1c;
-        text-shadow: 0 0 5px #fb0d1c;
-        animation-delay: -1.5s;
-    }
-
-    .text-2 {
-        stroke: #f39c12;
-        text-shadow: 0 0 5px #f39c12;
-        animation-delay: -3s;
-    }
-
-    .text-3 {
-        stroke: #31fd6f;
-        text-shadow: 0 0 5px #31fd6f;
-        animation-delay: -4.5s;
-    }
-
-    .text-4 {
-        stroke: #1ca9fa;
-        text-shadow: 0 0 5px #1ca9fa;
-        animation-delay: -6s;
-    }
-
-    @keyframes stroke {
-        100% {
-            stroke-dashoffset: -400;
+        * {
+            padding: 0;
+            margin: 0;
         }
-    }
 
+        body {
+            background: #d3dada;
+            color: #fff;
+        }
 
-    .tui-item {
-        display: inline-block;
-        text-align: center;
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        color: #fb0e1c;
-        line-height: 100px;
-        border: 1px solid #fb0e1c;
-        font-size: 18px;
-    }
+        a {
+            color: #fff;
+            font-weight: 500;
+            outline: none;
+            text-decoration: none;
+        }
 
-    .tui-item:hover {
-        width: 104px;
-        height: 104px;
-        line-height: 104px;
-        font-size: 26px;
-    }
+        ul {
+            list-style: none;
+        }
 
-    .navtion {
-        text-align: center;
-    }
+        .tui-item {
+            display: inline-block;
+            text-align: center;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            color: #fb0e1c;
+            line-height: 80px;
+            border: 1px solid #fb0e1c;
+            font-size: 18px;
+        }
 
-    .navtion a {
-        margin: 0 50px;
-    }
+        .tui-item:hover {
+            width: 82px;
+            height: 82px;
+            line-height: 82px;
+            font-size: 26px;
+        }
 
-    .content-box {
-        width: 900px;
-        margin: 80px auto 20px;
-    }
+        .a-green {
+            border-color: #1ca9fa;
+            color: #1ca9fa;
+        }
 
-    .a-green {
-        border-color: #1ca9fa;
-        color: #1ca9fa;
-    }
+        .a-blue {
+            border-color: #31fd6f;
+            color: #31fd6f;
+        }
 
-    .a-blue {
-        border-color: #31fd6f;
-        color: #31fd6f;
-    }
+        header {
+            margin-top: 100px;
+        }
 
-    header {
-        margin-top: 100px;
-    }
+        h2 {
+            box-sizing: border-box;
+            border-right: 4px solid red;
+            padding-left: 70px;
+            font-size: 36px;
+            width: 100%;
+            color: red;
+            line-height: 170px;
+            background: #d4dada;
+        }
 
-    h4 {
-        width: 150px;
-        margin: auto;
-        color: #ffeee8;
-        font-size: 18px;
-        text-align: center;
-        padding-bottom: 4px;
-        border-bottom: 2px solid red;
-        text-shadow: 1px 0 #8B4513, 0 1px #8B4513, 0 -1px #8B4513, -1px 0 #8B4513;
-        cursor: pointer;
-    }
+        h4 {
+            width: 170px;
+            margin-left: 85px;
+            color: #ffeee8;
+            font-size: 24px;
+            text-align: center;
+            padding-bottom: 4px;
+            border-bottom: 2px solid #000;
+            text-shadow: 1px 0 #8B4513, 0 1px #8B4513, 0 -1px #8B4513, -1px 0 #8B4513;
+            cursor: pointer;
+        }
 
-    h4:hover {
-        font-size: 22px;
-        width: 200px;
-    }
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
 
-    ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
+        .ban-list {
+            margin-top: 50px;
+            display: block;
+            overflow: hidden;
+            clear: both;
+        }
 
-    .ban-list {
-        margin-top: 50px;
-        display: block;
-        overflow: hidden;
-        clear: both;
-    }
+        .ban-list ul {
+            margin: 30px 0 0 50px;
+        }
 
-    .ban-list ul {
-        margin: 30px 0 0 50px;
-    }
+        .ban-list ul li {
+            float: left;
+            width: 200px;
+            border: 1px solid #d8d6ca;
+            border-radius: 6px;
+            text-align: center;
+            padding: 6px 10px;
+            margin: 0 30px 30px 30px;
+        }
 
-    .ban-list ul li {
-        float: left;
-        width: 200px;
-        border: 1px solid #d8d6ca;
-        border-radius: 6px;
-        text-align: center;
-        padding: 6px 10px;
-        margin: 0 30px 30px 30px;
-    }
+        .ban-list ul li a {
+            display: inline-block;
+            width: 200px;
+            box-sizing: border-box;
+        }
 
-    .ban-list ul li a {
-        display: inline-block;
-        width: 200px;
-        box-sizing: border-box;
-    }
+        .ban-list ul li:hover {
+            background: red;
+            color: blue;
+            box-shadow: 2px 0 5px #fff;
+        }
 
-    .ban-list ul li:hover {
-        background: red;
-        color: blue;
-        box-shadow: 2px 0 5px #fff;
-    }
+        p {
+            text-align: center;
+        }
 
-    p {
-        text-align: center;
-    }
+        .git-add {
+            font-size: 12px;
+            margin-bottom: 20px;
+        }
 
-    .footer {
-        margin-top: 100px;
-    }
+        .zero-wrapper {
+            position: relative;
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+        }
 
-    .git-add {
-        font-size: 12px;
-        margin-bottom: 20px;
-    }
+        .zero-wrapper .item {
+            flex: auto;
+        }
+
+        .left-bg {
+            height: 100vh;
+            flex: 0 0 300px;
+            background: #000;
+        }
+
+        .content-box {
+            box-sizing: border-box;
+            background: #d93631;
+            min-height: 100vh;
+        }
+
+        .zero-icon {
+            height: 100vh;
+            flex: 0 0 150px !important;
+        }
+
+        .left-bg img {
+            position: relative;
+            top: 100px;
+            left: 78px;
+        }
+
+        .zero-icon img {
+            position: absolute;
+            right: 30px;
+            top: 30px;
+            width: 100px;
+            height: 100px;
+        }
+
+        .navtion {
+            box-sizing: border-box;
+            padding-top: 20px;
+            text-align: center;
+            position: absolute;
+            top: 170px;
+            border-top: 4px solid #000;
+        }
+
+        .navtion p {
+            color: #000;
+            font-size: 24px;
+            font-weight: 700;
+        }
+
+        .navtion a {
+            color: #000;
+            margin: 20px 0px 0 0;
+        }
+
+        footer {
+            position: absolute;
+            bottom: 20px;
+            text-align: center;
+            font-size: 16px;
+            margin-left: 70px;
+        }
     </style>
 </head>
 
 <body>
-    <header>
-        <svg width="100%" height="100">
-            <text text-anchor="middle" x="50%" y="50%" class="text text-1">
-                ZERO'S WEBSITE
-            </text>
-            <text text-anchor="middle" x="50%" y="50%" class="text text-2">
-                ZERO'S WEBSITE
-            </text>
-            <text text-anchor="middle" x="50%" y="50%" class="text text-3">
-                ZERO'S WEBSITE
-            </text>
-            <text text-anchor="middle" x="50%" y="50%" class="text text-4">
-                ZERO'S WEBSITE
-            </text>
-        </svg>
-    </header>
-    <nav class="navtion">
-        <a href="http://vue.zeroyh.cn" class="tui-item color-red">VUE</a>
-        <a href="http://node.zeroyh.cn" class="tui-item a-green">NODE</a>
-        <a href="http://blog.zeroyh.cn" class="tui-item a-blue">BLOG</a>
-    </nav>
-    <div class="content-box">
-        <div class="plugins ban-list">
-            <h4>插件版块</h4>
-            <ul>
-                <li>
-                    <a href="../dialog">dialog 弹窗体验页面</a>
-                </li>
-                <li>
-                    <a href="../nojsCheck/nojsCheck.html">无jsTab切换</a>
-                </li>
-                <li>
-                    <a href="../nojsCheck/radioBeauty.html">美化radio等</a>
-                </li>
-                <li>
-                    <a href="../pagination">pagePlugin 插件体验页面</a>
-                </li>
-                <li>
-                    <a href="../needLearn/change-url.html">转换长连接短连接</a>
-                </li>
-                <li>
-                    <a href="./">待定插件</a>
-                </li>
-            </ul>
+    <div class="zero-wrapper">
+        <div class="left-bg item">
+            <img src="../images/bg-zero.png" alt="">
         </div>
-        <div class="lear-list ban-list">
-            <h4>学习计划</h4>
-            <ul>
-                <li>
-                    <a href="../needLearn/needLearn.html">学习列表</a>
-                </li>
-                <li>
-                    <a href="../needLearn/needBook.html">待读书籍</a>
-                </li>
-            </ul>
+        <div class="content-box item">
+            <h2>CONTENT</h2>
+            <div class="plugins ban-list">
+                <h4>PLUGIN</h4>
+                <ul>
+                    <li>
+                        <a href="../dialog">dialog test</a>
+                    </li>
+                    <li>
+                        <a href="../nojsCheck/nojsCheck.html">no jsTab</a>
+                    </li>
+                    <li>
+                        <a href="../nojsCheck/radioBeauty.html">css radio</a>
+                    </li>
+                    <li>
+                        <a href="../pagination">page plugin</a>
+                    </li>
+                    <li>
+                        <a href="../needLearn/change-url.html">change long link to sort</a>
+                    </li>
+                    <li>
+                        <a href="./">loading...</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="lear-list ban-list">
+                <h4>STUDY PLAY</h4>
+                <ul>
+                    <li>
+                        <a href="../needLearn/needLearn.html">learn list</a>
+                    </li>
+                    <li>
+                        <a href="../needLearn/needBook.html">book list</a>
+                    </li>
+                </ul>
+            </div>
+            <footer>
+                <span>GitHub Adress:</span> <span class="git-add"><a href="https://github.com/zeroHu">https://github.com/zeroHu</a></span>
+            </footer>
+        </div>
+        <div class="zero-icon item">
+            <img src="../images/website-bird.png" alt="">
+            <nav class="navtion">
+                <p>Link to Other</p>
+                <a href="http://vue.zeroyh.cn" class="tui-item color-red">VUE</a>
+                <a href="http://node.zeroyh.cn" class="tui-item color-red">NODE</a>
+                <a href="http://blog.zeroyh.cn" class="tui-item color-red">BLOG</a>
+            </nav>
         </div>
     </div>
-    <footer>
-        <p class="git-add"><a href="https://github.com/zeroHu">https://github.com/zeroHu</a></p>
-    </footer>
+
 </body>
 
 </html>
