add css index and scale menu

--- a/index/index.html
+++ b/index/index.html
@@ -246,6 +246,9 @@
                     <li>
                         <a href="../pagination">page plugin</a>
                     </li>
+		    <li>
+			<a href="../css">css demo</a>
+		    </li>
                     <li>
                         <a href="../needLearn/change-url.html">change long link to sort</a>
                     </li>
