add css flowchart

--- a/css/index.html
+++ b/css/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>css index</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <p>
-      <a href="./grid/">grid</a>
+        <a href="./grid/">grid</a>
     </p>
 
     <p>
-      <a href="./scaleMenu">scale menu</a>
+        <a href="./scaleMenu">scale menu</a>
     </p>
-  </body>
+
+    <p>
+        <a href="./cssMagic/cssFlowchart.html">grid</a>
+    </p>
+</body>
+
 </html>
