--- a/css/index.html
+++ b/css/index.html
@@ -15,7 +15,11 @@
     </p>
 
     <p>
-        <a href="./cssMagic/cssFlowchart.html">grid</a>
+        <a href="./cssMagic/cssFlowchart.html">css flowchart</a>
+    </p>
+
+    <p>
+        <a href="./shape/icons.html">css icons</a>
     </p>
 </body>
 
