--- a/needLearn/needBook.html
+++ b/needLearn/needBook.html
@@ -89,7 +89,7 @@
                 2. 穷爸爸富爸爸
             </li>
 
-            <div class="item">other what I want to read book</div>
+            <div class="item">其他</div>
             <li class="">
                 1. 高效习惯
             </li>
